# textutils3

./: .travis.yml  MANIFEST.in  README.md  find_bad_characters.py  latexdiff.py  pyproject.toml  setup.cfg  spellcheck.py
src/textutils3/: find_bad_char.py  latexdiff.py  spellcheck.py
