[metadata]
name = textutils3
version = 1.0.0
author = Michael Hirsch, Ph.D.
author_email = scivision@noreply.users.github.com
url = https://github.com/scivision/textutils3
description = Recursively check spelling and grammer and other tasks with text documents.
keywords =
  spellcheck
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: End Users/Desktop
  Operating System :: OS Independent
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: Implementation :: CPython
  Topic :: Utilities
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
packages = find:
zip_safe = False
scripts =
  spellcheck.py
  find_bad_characters.py
  latexdiff.py
install_requires =

[options.extras_require]
tests =
  pytest
cov =
  flake8
  mypy

[options.entry_points]
console_scripts =
  spellcheck = spellcheck:main
  find_bad_char = find_bad_characters:main
